--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Zer0Power/ip-botmain#readme",
   "dependencies": {
     "@discordjs/rest": "1.1",
+    "axios": "^1.3.4",
     "discord-api-types": "^0.37.35",
     "discord.js": "v14.3",
     "dotenv": "^16.0.3"
